--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-Edzy Home
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <style>
+            html, body {
+                background-color: black;
+                color: white;
+                font-family: "Poppins", sans-serif;
+                font-weight: 400;
+                font-style: normal;
+  
+            }
+
+            .title {
+                font-size: 150px;
+            }
+
+            .yellow {
+                color: #D3A121;
+            }
+            .sub-title {
+                font-size: 20px;
+                bottom: 15px;
+                position: relative;
+            }
+            a {
+                color: white;
+            }
+            a:hover {
+                color: #D3A121;
+            }
+            .md {
+                color: rgb(231, 227, 227);
+                background-color: #36373A;
+                padding: 2px;
+            }
+            @media only screen and (max-width: 1200px) {
+                .latter {
+                    top: 150px;
+                    position: relative;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+         <center>
+            <span class="title"> Ed</span> <span class="yellow title">Zy</span>
+            <p> <span class="sub-title"> Education</span><span style="color: gray" class="sub-title"> made </span> <span class="yellow sub-title"> lazy</span></p>
+         </center>
+        </div>
+
+        <div class="container px-5" style="top: 50px; position: relative;">
+            <div class="row gx-5 align-items-center justify-content-center">
+                <div class="col-lg-8 col-xl-7 col-xxl-6" id="main-header-start">
+                    <div>
+                        <span><button style="border-radius: 30px; height: 50px; width: 50px;border: none; outline: none; font-weight: 700; font-size: 25px;">1</button></span>
+                        <span class="yellow" style="left: 10px; position: relative; font-size: 25px;"> Download <a href="extension.zip" target="_blank">extension.zip</a></span>
+                    </div>
+                    <div style="top: 20px; position: relative;">
+                        <span><button style="border-radius: 30px; height: 50px; width: 50px;border: none; outline: none; font-weight: 700; font-size: 25px;">2</button></span>
+                        <span class="yellow" style="left: 10px; position: relative; font-size: 25px;"> Extract the file</span>
+                    </div>
+                    <div style="top: 40px; position: relative;">
+                        <span><button style="border-radius: 30px; height: 50px; width: 50px;border: none; outline: none; font-weight: 700; font-size: 25px;">3</button></span>
+                        <span class="yellow" style="left: 10px; position: relative; font-size: 25px;"> Enter <span class="md">chrome://extensions</span> on a new tab </a></span>
+                    </div>
+                    <div style="top: 60px; position: relative;">
+                        <span><button style="border-radius: 30px; height: 50px; width: 50px;border: none; outline: none; font-weight: 700; font-size: 25px;">4</button></span>
+                        <span class="yellow" style="left: 10px; position: relative; font-size: 25px;"> Enable Developer Mode</span>
+                    </div>
+                    <div style="top: 80px; position: relative;">
+                        <span><button style="border-radius: 30px; height: 50px; width: 50px;border: none; outline: none; font-weight: 700; font-size: 25px;">4</button></span>
+                        <span class="yellow" style="left: 10px; position: relative; font-size: 25px;"> Click on <span class="md">Load Unpacked</span> and upload the folder</span>
+                    </div>
+                </div>
+                <div class="latter col-xl-5 col-xxl-6">
+                    <center>
+                        Video TBA
+                    </center>
+                </div>
+            </div>
+        </div>
+    <!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
+</body>
+</html>
