--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <title> Edzy </title>
-        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Dot-yellow.svg/1200px-Dot-yellow.svg.png" type="image/png">
+        <link rel="icon" href="extension/images/icon-128.png" type="image/png">
         <style>
             html, body {
                 background-color: black;
@@ -85,7 +85,7 @@
                 </div>
                 <div class="latter col-xl-5 col-xxl-6">
                     <center>
-                        <video width="100%" height="100%" object-fit="cover" preload="metadata" muted="" onloadstart="this.play();" loop="" playsinline="" type="video/mp4" src="video.mp4"></video>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UQMsM343m8Q?si=Hx0YZZpNQm-DXUIl?&amp;autoplay=1&mute=1&controls=0" frameborder="0" allow="autoplay" mute></iframe>
                     </center>
                 </div>
             </div>
